--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,3 +36,10 @@
 .profileImage {
   -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
+
+@media screen and (min-width: 640px) {
+  h3.force-break span::before {
+    content: "\A";
+    white-space: pre;
+  }
+}
